@@ -1,3 +1,4 @@
+# This Build.PL for Skryf-Theme-Booshka was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.006.
 use 5.006;
 use Module::Build::Tiny 0.030;
 Build_PL();
