@@ -1,23 +1,11 @@
 %= t 'div', id => 'navbar' => begin
 <div class="links">
-  %= link_to 'Skryf::Admin' => url_for('admin_blog_dashboard')
-  &infin;
-  %= link_to 'View Site' => url_for(app->config->{landing_page})
+  %= t 'ul'
+  %= t 'li', class => 'button-small' => begin
+    %= link_to 'Skryf::Admin' => url_for('admin_blog_dashboard')
+  %= end
+  %= t 'li', class => 'button-small' => begin
+    %= link_to 'View Site' => url_for(app->config->{landing_page})
+  %= end
 </div>
 %= end
-<div id="navbar-sub">
-  <div class="links">
-    <ul>
-      <li class="item-header">
-      Site
-      </li>
-        <ul class="item-list">
-          % foreach my $item (sort(@{app->admin_menu})) {
-          <li>
-            %= link_to $item->{menu}{name} => url_for($item->{menu}{action})
-          </li>
-          % }
-        </ul>
-    </ul>
-  </div>
-</div>
