@@ -1,0 +1,14 @@
+color1 = #134B57
+color2 = #81A489
+color3 = #F1D8B5
+color4 = #F2A054
+color5 = #C04D31
+
+body
+  color #000
+  background-color color1
+  font-family 'Droid Sans Mono', sans-serif
+  font-size 1em
+  padding 0
+  margin 0
+
